<resources>
    <string name="app_name">Delta</string>

    <string name="openNav">Navigation Open</string>
    <string name="closeNav">Navigation Close</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_task">Task</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_habit">Habit</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <!-- Calendar -->
    <string name="currentDate">Current Date</string>
    <string name="new_eventTitle">New Event</string>
    <string name="select_date">Select Date</string>
    <string name="txtTImeTo">To</string>
    <string name="txtTimeFrom">From</string>
    <string name="txtEventName">Name</string>
    <string name="txtEnteredName" />
    <string name="hntEventName">New Event</string>
    <string name="eventDescription" />
    <string name="btnSave">Save</string>
    <string name="add_description">Add Description</string>
    <string name="dateFormatEvent">EEEE, dd MMM yyyy</string>
    <string name="txtWelcome">Welcome</string>
    <string name="have_an_acoount">Have an Account? Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="example_email">example@hotmail.com</string>
    <string name="your_name">Your Name</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_sign_up">No Account? Sign up</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="your_achievements">Your Achievements</string>
    <string name="emailAcc">Email</string>
    <string name="enter_name">Enter Name</string>

    <!-- Task Manager -->
    <string name="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia.</string>
    <string name="task_calendar">Calendar</string>
    <string name="task_checklist">Task List</string>
    <string name="task_priority">Priority</string>
    <string name="task_save">Save</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="set_time">⏰ Set Time</string>
    <string name="set_reminder">🔔 Set Reminder</string>
    <string name="remind">Remind</string>
    <string name="set">Set</string>
    <string name="hint_time">10</string>

    <string name="task_overview">Task Overview</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="completedTasks">250</string>
    <string name="completion_rate">Completion Rate</string>
    <string name="completionRate">75%</string>
    <string name="completion_distribution">Completion Distribution</string>
    <string name="completion_rate_distribution">Completion Rate Distribution</string>

    <string name="task_report">Task Report</string>

    <string-array name="priority">
        <item>🚩 High</item>
        <item>🚩 Medium</item>
        <item>🚩 Low</item>
    </string-array>

    <string-array name="remind">
        <item>mins</item>
        <item>hours</item>
        <item>days</item>
    </string-array>


    <!-- Strings for the Pomodoro Timer -->
    <string name="focus_timer">Focus timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="start_timer">Start timer</string>
    <string name="flip_mode">Flip Mode</string>
    <string name="background_music">Music</string>
    <string name="choose_focus">Choose Focus</string>
    <string name="default_timer_value">00:00</string>
    <string name="take_a_break">Take a Break</string>
    <string name="start_break">Start Break</string>
    <string name="break_timer">Break Timer</string>
    <string name="skip_break">Skip Break</string>
    <string-array name="arrayChooseFocus">
        <item>🎯Mobile application project</item>
        <item>Trip</item>
        <item>Activities</item>
    </string-array>
    <string name="pomodoro_settings">Pomodoro Settings</string>
    <string name="short_break_duration">Break Duration</string>
    <string name="short_break_duration_hint">5</string>
    <string name="timeUnits">minutes</string>
    <string name="short_focus_duration">Focus duration</string>
    <string name="short_focus_duration_hint">25</string>
    <string name="long_focus_duration_hint">45</string>
    <string name="long_focus_duration">Long focus duration</string>
    <string name="long_break_duration_hint">15</string>
    <string name="long_break_duration">Long break duration</string>
    <string name="pomodoro_reports">Pomodoro Reports</string>
    <string name="daily_pomodoro_report">Daily Pomodoro Report</string>
    <string name="back_button">Back Button</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="total_focus_time">Total Focus Time :</string>
    <string name="total_break_time">Total Break Time :</string>
    <string name="hours">hours</string>
    <string name="yearly_pomodoro_report">Yearly Pomodoro Report</string>
    <string name="weekly_pomodoro_report">Weekly Pomodoro Report</string>
    <string name="monthly_pomodoro_report">Monthly Pomodoro Report</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>

    <string name="meat" />
    <string name="send" />
    <string name="message" />
    <string name="datepick">Select date</string>
    <string name="ResumeButtonText">Resume Timer</string>
    <string name="PauseButtonText">Pause Timer</string>
    <string name="StarButtonText">Start Timer</string>
    <string name="flip_to_start_the_timer">Flip to start the timer</string>
    <string name="pomodoro_breaktimer">Break Timer</string>
</resources>