<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/baseline_edit_calendar"
        android:title="@string/menu_calendar" />
    <item
        android:id="@+id/checkList"
        android:icon="@drawable/baseline_check_list"
        android:title="@string/task_checklist" />
    <item
        android:id="@+id/tag"
        android:icon="@drawable/baseline_tag_24"
        android:title="@string/task_tag" />
    <item
        android:id="@+id/priority"
        android:icon="@drawable/baseline_priority_24"
        android:title="@string/task_priority" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/baseline_save_24"
        android:title="@string/task_save" />
</menu>