<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rich_black"
    tools:context=".Activities.PomodoroReports">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/candy_pink">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="2dp"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10sp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/overviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/backButton"
            android:background="@android:color/transparent"
            android:text="@string/pomodoro_reports"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutPomodoroReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rich_black"
            app:tabSelectedTextColor="@color/candy_pink"
            app:tabIndicatorColor="@color/candy_pink"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemDailyReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemWeeklyReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weekly"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemMonthlyReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monthly"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemYearlyReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yearly"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerPomodoroReports"
            android:name="com.SecretDelta.delta.Fragments.YearlyPomodoroReport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>




</LinearLayout>