<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layoutFocusTimer"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragments.Stopwatch"
android:background="@color/rich_black">

<Button
    android:id="@+id/buttonStartTimer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="138dp"
    android:layout_marginEnd="139dp"
    android:layout_marginBottom="16dp"
    android:text="@string/start_timer"
    android:textColor="@color/white"
    android:backgroundTint="@color/candy_pink"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

<com.google.android.material.switchmaterial.SwitchMaterial
    android:id="@+id/switchFlipMode"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/flip_mode"
    android:textColor="@color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.switchmaterial.SwitchMaterial
    android:id="@+id/switchMusic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="17dp"
    android:text="@string/background_music"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Spinner
    android:id="@+id/spinnerChooseFocus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:backgroundTint="@color/white"
    android:layout_marginTop="80dp"
    android:layout_marginEnd="150dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/textViewChooseFocus"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textViewChooseFocus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="124dp"
    android:layout_marginTop="80dp"
    android:text="@string/choose_focus"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintEnd_toStartOf="@+id/spinnerChooseFocus"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ProgressBar
    android:id="@+id/progressBarTimerAction"
    style="?android:attr/progressBarStyle"
    android:layout_width="347dp"
    android:layout_height="330dp"
    android:layout_marginStart="70dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="70dp"
    android:indeterminateTint="@color/metallic_seaweed"
    app:layout_constraintBottom_toTopOf="@+id/buttonStartTimer"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.023" />

<TextView
    android:id="@+id/textViewDefaultTime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/default_timer_value"
    android:textColor="@color/white"
    android:textSize="60sp"
    app:layout_constraintBottom_toBottomOf="@+id/progressBarTimerAction"
    app:layout_constraintEnd_toEndOf="@+id/progressBarTimerAction"
    app:layout_constraintStart_toStartOf="@+id/progressBarTimerAction"
    app:layout_constraintTop_toTopOf="@+id/progressBarTimerAction" />

<Button
    android:id="@+id/buttonBreakTimer"
    android:layout_width="121dp"
    android:layout_height="35dp"
    android:layout_marginStart="19dp"
    android:layout_marginEnd="6dp"
    android:layout_marginBottom="22dp"
    android:text="@string/take_a_break"
    android:textColor="@color/white"
    android:backgroundTint="@android:color/transparent"
    android:textSize="11sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/buttonStartTimer" />

</androidx.constraintlayout.widget.ConstraintLayout>