<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layoutFocusTimer"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragments.BreakTimer"
android:background="@color/rich_black">

<Button
    android:id="@+id/buttonStartTimer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="138dp"
    android:layout_marginEnd="139dp"
    android:layout_marginBottom="16dp"
    android:text="@string/start_break"
    android:textColor="@color/white"
    android:backgroundTint="@color/candy_pink"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textViewChooseFocus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/break_timer"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<ProgressBar
    android:id="@+id/progressBarTimerAction"
    style="?android:attr/progressBarStyle"
    android:layout_width="347dp"
    android:layout_height="330dp"
    android:layout_marginStart="70dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="70dp"
    android:indeterminateTint="@color/metallic_seaweed"
    app:layout_constraintBottom_toTopOf="@+id/buttonStartTimer"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.023" />

<TextView
    android:id="@+id/textViewDefaultTime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/default_timer_value"
    android:textColor="@color/white"
    android:textSize="60sp"
    app:layout_constraintBottom_toBottomOf="@+id/progressBarTimerAction"
    app:layout_constraintEnd_toEndOf="@+id/progressBarTimerAction"
    app:layout_constraintStart_toStartOf="@+id/progressBarTimerAction"
    app:layout_constraintTop_toTopOf="@+id/progressBarTimerAction" />

<Button
    android:id="@+id/buttonSkipBreak"
    android:layout_width="121dp"
    android:layout_height="35dp"
    android:layout_marginStart="19dp"
    android:layout_marginEnd="6dp"
    android:layout_marginBottom="22dp"
    android:text="@string/skip_break"
    android:textColor="@color/white"
    android:backgroundTint="@android:color/transparent"
    android:textSize="11sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/buttonStartTimer" />

</androidx.constraintlayout.widget.ConstraintLayout>