<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/rich_black"
tools:context=".Fragments.MonthlyPomodoroReport">

<TextView
    android:id="@+id/overviewText"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@android:color/transparent"
    android:text="@string/monthly_pomodoro_report"
    android:gravity="center"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/metallic_seaweed"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_focus_time"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="520"
                android:textColor="@color/white"
                android:textSize="40sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/metallic_seaweed"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_break_time"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:textColor="@color/white"
                android:textSize="40sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_margin="10dp"
    android:background="@color/white">
</FrameLayout>
</LinearLayout>